adding get mailbox route
