# main.go
@@ -6,10 +6,12 @@ import (
 	"time"
 
 	"github.com/gofiber/fiber/v2"
+	_recover "github.com/gofiber/fiber/v2/middleware/recover"
 	"github.com/gofiber/swagger"
 	_ "github.com/iambpn/go-email/docs"
 	"github.com/iambpn/go-email/src/config"
 	"github.com/iambpn/go-email/src/controller"
+	"github.com/iambpn/go-email/src/middleware"
 )
 
 // @title						Go Email Service API
@@ -41,10 +43,17 @@ func main() {
 		},
 	})
 
+	// add panic recover middleware
+	app.Use(_recover.New(_recover.Config{
+		EnableStackTrace: config.GetConfig("GOENV", "development") == "development",
+	}))
+
 	app.Get("/swagger/*", swagger.HandlerDefault)
 
 	controller.AuthRouter(app.Group("/auth"))
+	app.Use(middleware.IsImapWrapperDefined)
 	controller.MessageRouter(app.Group("/message"))
+	controller.MailBoxRouter(app.Group("/mailbox"))
 
 	addr := fmt.Sprintf("%s:%s", config.GetConfig("host", ""), config.GetConfig("port", "3000"))
 	err := app.Listen(addr)
